# MonteCarlo

./: LinearRegressionErrorTable.py  MC_IA4.ipynb  MC_IA_1.py  MC_IA_2.py  MC_IA_3.py  MC_Mistral.ipynb  MC_Mistral.py  MC_Remi.py  MC_Y&Y_TC - Variance Variable.ipynb  MC_Y&Y_TC.ipynb  ProbabilisticDataFrame.py  main.py  pdf_class_test.ipynb  pyproject.toml
data_scaling/: 17_03_2025.lvm
