[project]
name = "incertitudes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coolprop>=7.2.0",
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pypdf>=6.6.0",
    "tqdm>=4.67.1",
    "utilities",
]

[tool.uv.sources]
utilities = { path = "../../Librairies/utilities" }

[dependency-groups]
dev = [
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
]
